TEST_PROGRAMS/INVALID/remi_bernard/literal.min
# Invalid floating-point literal
print .;

